--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <h2>What's at Stake for Your Business?</h2>
             <span class="intro-sentence">Without a clear electrical maintenance plan, your business could face serious risks:</span>
             <div class="services-list">
-                <ul>
-                    <li>Invalid insurance coverage due to non-compliant electrical systems.</li>
-                    <li>Costly downtime and lost revenue from an unexpected electrical fault.</li>
-                    <li>Safety hazards that put your employees and customers at risk.</li>
-                    <li>Financial penalties for not meeting compliance standards.</li>
+                <ul style="list-style-type: none;">
+                    <li>❌ Invalid insurance coverage due to non-compliant electrical systems.</li>
+                    <li>❌ Costly downtime and lost revenue from an unexpected electrical fault.</li>
+                    <li>❌ Safety hazards that put your employees and customers at risk.</li>
+                    <li>❌ Financial penalties for not meeting compliance standards.</li>
                 </ul>
             </div>
         </section>
@@ -39,12 +39,12 @@
             <h2>The R.A.B Electrical Advantage</h2>
             <span class="intro-sentence">When you partner with R.A.B Electrical, you're investing in your business's safety and long-term success. Our services provide:</span>
             <div class="services-list">
-                <ul>
-                    <li>Comprehensive electrical and fire safety solutions, from fire alarm servicing to PAT testing, for complete peace of mind.</li>
-                    <li>Bespoke compliance documentation and logbooks to keep your business records organized and audit-ready.</li>
-                    <li>Tiered packages to suit your businesses budget.</li>
-                    <li>Reliable and professional workmanship that you can trust.</li>
-                    <li>Timely, efficient solutions that prevent future problems.</li>
+                <ul style="list-style-type: none;">
+                    <li>✅ Comprehensive electrical and fire safety solutions, from fire alarm servicing to PAT testing, for complete peace of mind.</li>
+                    <li>✅ Bespoke compliance documentation and logbooks to keep your business records organized and audit-ready.</li>
+                    <li>✅ Tiered packages to suit your businesses budget.</li>
+                    <li>✅ Reliable and professional workmanship that you can trust.</li>
+                    <li>✅ Timely, efficient solutions that prevent future problems.</li>
                 </ul>
             </div>
         </section>
