--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <li>✅ Comprehensive electrical and fire safety solutions, from fire alarm servicing to PAT testing, for complete peace of mind.</li>
                     <li>✅ Bespoke compliance documentation and logbooks to keep your business records organized and audit-ready.</li>
                     <li>✅ Tiered packages to suit your businesses budget.</li>
-                    <li>✅ Reliable and professional workmanship that you can trust.</li>
+                    <li>✅ Reliable and professional workmanship that <a href="reviews.html">you can trust</a>.</li>
                     <li>✅ Timely, efficient solutions that prevent future problems.</li>
                 </ul>
             </div>
